gl31-master/src/test/deca/context/valid/complet/attribut.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 21/01/2021
class A{
    int index;
}
{
    A a = new A();
    int b = a.index;
}
