gl31-master/src/test/deca/context/invalid/complet/call_bool_int.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 18: Erreur, le type appelant n'est pas le bon
//
// Historique:
//    cree le 20/01/2021
class A{}
{
    int methInt(){
        int b = 2;
        return b;
    }
}
{
    A a;
    boolean b = a.methInt();
}
